--- a/myAccountBook/Info.plist
+++ b/myAccountBook/Info.plist
@@ -34,5 +34,40 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+    <key>CFBundleDocumentTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeName</key>
+            <string>myAccountBook Document</string>
+            <key>LSHandlerRank</key>
+            <string>Owner</string>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>LSItemContentTypes</key>
+            <array>
+                <string>com.frankc.myAccountBook.sqlite</string>
+            </array>
+        </dict>
+    </array>
+    <key>UTExportedTypeDeclarations</key>
+    <array>
+        <dict>
+            <key>UTTypeConformsTo</key>
+            <array>
+                <string>public.data</string>
+            </array>
+            <key>UTTypeIdentifier</key>
+            <string>com.frankc.myAccountBook.sqlite</string>
+            <key>UTTypeDescription</key>
+            <string>myAccountBook Document</string>
+            <key>UTTypeTagSpecification</key>
+            <dict>
+                <key>public.filename-extension</key>
+                <string>sqlite</string>
+                <key>public.mime-type</key>
+                <string>application/myAccountBook</string>
+            </dict>
+        </dict>
+    </array>
 </dict>
 </plist>
